refactor(Race): 빈 차량 목록 예외 처리 추가 및 수집 메서드 단순화